[package]
name = "rand_seeder"
version = "0.1.0" # NB: When modifying, also modify html_root_url in lib.rs
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-lang-nursery/rand"
documentation = "https://docs.rs/rand_seeder"
homepage = "https://crates.io/crates/rand_seeder"
description = """
A universal random number seeder using SipHash.
"""
keywords = ["random", "rng"]
categories = ["algorithms", "no-std"]

[badges]
travis-ci = { repository = "rust-lang-nursery/rand" }
appveyor = { repository = "dhardy/rand" }

[dependencies]
rand_core = { path = "../rand_core", version = "0.2", default-features = false }
