[package]
name = "rand_trng"
version = "0.9.0"
authors = ["The Rand Project Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-random/rand"
documentation = "https://docs.rs/thread-rng"
description = "Lazily-initialized thread-local random number generator"
keywords = ["random", "rng"]
categories = ["algorithms", "no-std"]
autobenches = true
edition = "2021"
rust-version = "1.61"

[dependencies]
rand_chacha = { path = "../rand_chacha", version = "=0.9.0-alpha.1", features = ["getrandom", "std"] }
