[package]
name = "rand_xorshift"
version = "0.1.0" # NB: When modifying, also modify html_root_url in lib.rs
authors = ["The Rand Project Developers", "The Rust Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-random/rand"
documentation = "https://docs.rs/rand_isaac"
homepage = "https://crates.io/crates/rand_isaac"
description = """
Xorshift random number generator
"""
keywords = ["random", "rng", "xorshift"]
categories = ["algorithms", "no-std"]

[badges]
travis-ci = { repository = "rust-random/rand" }
appveyor = { repository = "dhardy/rand" }

[features]
serde1 = ["serde", "serde_derive"]

[dependencies]
rand_core = { path = "../rand_core", version = ">=0.2, <0.4", default-features=false }
serde = { version = "1", optional = true }
serde_derive = { version = "^1.0.38", optional = true }

[dev-dependencies]
# This is for testing serde, unfortunately we can't specify feature-gated dev
# deps yet, see: https://github.com/rust-lang/cargo/issues/1596
bincode = "1"
