[package]
name = "rand_xoshiro"
version = "0.1.0" # NB: When modifying, also modify html_root_url in lib.rs
authors = ["The Rand Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-random/rand"
documentation = "https://docs.rs/rand_xoshiro"
homepage = "https://crates.io/crates/rand_xoshiro"
description = "Xoshiro, xoroshiro and splitmix64 random number generators"
keywords = ["random", "rng"]
categories = ["algorithms"]

[dependencies]
byteorder = { version = "1", default-features=false }
rand_core = { path = "../rand_core", version = "0.3", default-features=false }

[dev-dependencies]
rand = { path = "..", version = "0.6", default-features=false }  # needed for doctests
