[package]
name = "rand_xoshiro"
version = "0.2.1" # NB: When modifying, also modify html_root_url in lib.rs
authors = ["The Rand Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-random/rand"
documentation = "https://docs.rs/rand_xoshiro"
homepage = "https://crates.io/crates/rand_xoshiro"
description = "Xoshiro, xoroshiro and splitmix64 random number generators"
keywords = ["random", "rng"]
categories = ["algorithms"]

[features]
serde1 = ["serde", "serde_derive"]

[dependencies]
byteorder = { version = "1", default-features=false }
rand_core = { path = "../rand_core", version = "0.5" }
serde = { version = "1", optional=true }
serde_derive = { version = "^1.0.38", optional=true }

[dev-dependencies]
rand = { path = "..", version = "0.6", default-features=false }  # needed for doctests
# This is for testing serde, unfortunately we can't specify feature-gated dev
# deps yet, see: https://github.com/rust-lang/cargo/issues/1596
bincode = { version = "1" }
